--- a/Angular2App/src/app/employee/employee.component.html
+++ b/Angular2App/src/app/employee/employee.component.html
@@ -19,12 +19,14 @@ td{
         <td>Last Name</td>
         <td>{{lastName}}</td>
     </tr>
-    <tr>
+    <tr *ngIf='showDetails'>
         <td>Gender</td>
         <td>{{gender}}</td>
     </tr>
-    <tr>
+    <tr *ngIf='showDetails'>
         <td>Age</td>
         <td>{{age}}</td>
     </tr>
 </table>
+<br/>
+<button (click)="toggleEvent()">{{showDetails?'Hide':'Show'}} Details</button>
