--- a/Angular2App/src/app/employee/employeeList.components.html
+++ b/Angular2App/src/app/employee/employeeList.components.html
@@ -6,15 +6,17 @@
             <th>Gender</th>
             <th>Anual Salary</th>
             <th>Date of Birth</th>
+            <th>Index</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let employee of employees;trackBy:trackByEmpCode">
+        <tr *ngFor="let employee of employees;trackBy:trackByEmpCode;let i=index">
             <td>{{employee.code}}</td>
             <td>{{employee.name}}</td>
             <td>{{employee.gender}}</td>
             <td>{{employee.anualSalary}}</td>
             <td>{{employee.dateOfBirth}}</td>
+            <td>{{i}}</td>
         </tr>
         <tr *ngIf="!employees || employees.length==0">
             <td colspan="5">No Employee to display</td>
