--- a/Angular2App/src/app/employee/employeeList.components.html
+++ b/Angular2App/src/app/employee/employeeList.components.html
@@ -10,13 +10,15 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let employee of employees;trackBy:trackByEmpCode;let i=index">
+        <tr *ngFor="let employee of employees;trackBy:trackByEmpCode;let i=index;let isFirst=first;let isLast=last;">
             <td>{{employee.code}}</td>
             <td>{{employee.name}}</td>
             <td>{{employee.gender}}</td>
             <td>{{employee.anualSalary}}</td>
             <td>{{employee.dateOfBirth}}</td>
             <td>{{i}}</td>
+            <td>{{isFirst}}</td>
+            <td>{{isLast}}</td>
         </tr>
         <tr *ngIf="!employees || employees.length==0">
             <td colspan="5">No Employee to display</td>
