--- a/Angular2App/src/app/employee/employeeList.components.html
+++ b/Angular2App/src/app/employee/employeeList.components.html
@@ -7,10 +7,14 @@
             <th>Anual Salary</th>
             <th>Date of Birth</th>
             <th>Index</th>
+            <th>isFirst</th>
+            <th>isLast</th>
+            <th>isEven</th>
+            <th>isOdd</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let employee of employees;trackBy:trackByEmpCode;let i=index;let isFirst=first;let isLast=last;">
+        <tr *ngFor="let employee of employees;trackBy:trackByEmpCode;let i=index;let isFirst=first;let isLast=last;let isEven=even;let isOdd=odd">
             <td>{{employee.code}}</td>
             <td>{{employee.name}}</td>
             <td>{{employee.gender}}</td>
@@ -19,6 +23,8 @@
             <td>{{i}}</td>
             <td>{{isFirst}}</td>
             <td>{{isLast}}</td>
+            <td>{{isEven}}</td>
+            <td>{{isOdd}}</td>
         </tr>
         <tr *ngIf="!employees || employees.length==0">
             <td colspan="5">No Employee to display</td>
